# Optimization-Project

./: .gitignore  CMakeLists.txt  README.md  bfgs.cpp  bfgs.h  ga.cpp  ga.h  main.cpp  nelderMead.cpp  nelderMead.h  newtonTr.cpp  newtonTr.h  optimization.cpp  optimization.h  pso.cpp  pso.h  report.docx  utils.cpp  utils.h
build-local/: BFGS_results.txt  CMakeCache.txt  GA_results.txt  Makefile  cmake_install.cmake  initial_points.txt  nelder_mead_results.txt  newton_tr_results.txt  optimization_project  optimization_project_patched  pso_results.txt  test_result_BFGS.txt  test_result_GA.txt  test_result_NM.txt  test_result_NT.txt  test_result_PSO.txt
build_2/: BFGS_results.txt  CMakeCache.txt  GA_results.txt  Makefile  boxplot.py  cmake_install.cmake  data_train.txt  initial_points.txt  nelder_mead_results.txt  newton_tr_results.txt  optimization_project  output_BFGSWolfe_train.txt  output_GA_train.txt  output_NelderMead_train.txt  output_NewtonTR_train.txt  output_PSO_train.txt  output_test.csv  output_test.txt  pso_results.txt  results.csv  significance.txt  statistics.txt  test_result_BFGS.txt  test_result_GA.txt  test_result_NM.txt  test_result_NT.txt  test_result_PSO.txt
python/: bfgs_results.txt  genetic_results.txt  hesian_grad.py  nelder_mead_results.txt  newton_tr_results.txt  optimiz.py  pso_results.txt
